# workoflow-a2a

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: docker-build.yml  test.yml
proof/: adk_remote_a2a_proof.py  jsonrpc_curl.sh
src/workoflow_a2a/: __init__.py  agent_card.py  app.py  config.py  executor.py  observability.py  orchestrator_client.py  platform_client.py  sse.py
src/workoflow_a2a/identity/: __init__.py  base.py  personal_token.py
tests/: test_agent_card.py  test_app_integration.py  test_executor.py  test_sse.py
